--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,12 @@
     "prettier/react"
   ],
   "rules": {
-    "react/prop-types": 0
-  },
-  "plugins": ["react", "import", "jsx-a11y"],
+    "react/prop-types": 0,
+    "no-console": 1,
+    "react-hooks/rules-of-hooks": 2,
+    "react/hooks/exhaustive-deps": 1
+  },//0 means off, 1 is warn, 2 is an error
+  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
